Bug 377579 - Criteria cannot be saved in Query Designer
Summary: Criteria cannot be saved in Query Designer
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Queries (other bugs)
Version First Reported In: 3.0.1
Platform: Arch Linux Linux
: HI major
Target Milestone: 3.0.2
Assignee: Jarosław Staniek
URL:
Keywords:
: 371974 (view as bug list)
Depends on: 371974
Blocks: 377578
  Show dependency treegraph
 
Reported: 2017-03-13 20:26 UTC by Albrecht Will
Modified: 2017-05-25 10:33 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.2
Sentry Crash Report:


Attachments
attachment-16108-0.html (1.58 KB, text/html)
2017-03-13 20:49 UTC, Albrecht Will
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Albrecht Will 2017-03-13 20:26:36 UTC
It is impossible to work with the query designer. Editing a criteria is possible, but it cannot be saved. If I switch into SQL, the former criterias are lost.
So I can make a query only with SQL.
Comment 1 Jarosław Staniek 2017-03-13 20:46:30 UTC
Thanks Albrecht. Also analyzed e.g. here: #371974
Comment 2 Albrecht Will 2017-03-13 20:49:44 UTC
Created attachment 104545 [details]
attachment-16108-0.html

Am Montag, 13. März 2017, 21:46:30 CET schrieben Sie:
> 371974
Hi Jaroslaw,

but I did not *ad* a field, changing a criteria is my problem

Albrecht
Comment 3 Jarosław Staniek 2017-03-13 20:51:53 UTC
Thanks I see the difference. Internally both issues are related to the same logic so I thought it is worth to mention the other report.
Comment 4 Jarosław Staniek 2017-03-13 22:18:13 UTC
Regression compared to 2.9.
Comment 5 Jarosław Staniek 2017-04-05 22:55:05 UTC
Reviews:
https://phabricator.kde.org/D5295
https://phabricator.kde.org/D5294
Comment 6 Jarosław Staniek 2017-04-06 10:14:32 UTC
*** Bug 371974 has been marked as a duplicate of this bug. ***
Comment 7 Jarosław Staniek 2017-04-10 11:08:14 UTC
The same fix most probably also removes issues such as "Switching between query data and SQL and back crashes Kexi" (bug #377578)
Comment 8 Jarosław Staniek 2017-05-25 10:33:20 UTC
Git commit 04ccd83adebaa34173d41ad4f68f2446ea143d92 by Jaroslaw Staniek.
Committed on 22/05/2017 at 19:37.
Pushed by staniek into branch '3.0'.

GIT_SILENT Fix (unreleased) regression: broken retrieval of stored BLOBS, breaks static form images

(commit ce88fbae888e5f merged into 3.1 Alpha "Improve WHERE conditions handling in query and report designers")

M  +2    -2    src/core/kexiblobbuffer.cpp

https://commits.kde.org/kexi/04ccd83adebaa34173d41ad4f68f2446ea143d92
Comment 9 Jarosław Staniek 2017-05-25 10:33:20 UTC
Git commit 6a37ed92fb4d97daf4188c5bedd624cf726501ae by Jaroslaw Staniek.
Committed on 22/05/2017 at 19:38.
Pushed by staniek into branch '3.0'.

GIT_SILENT Add missing message/description parameters to addToWhereExpression, remove extra (same) call

M  +3    -2    src/plugins/reports/kexidbreportdata.cpp

https://commits.kde.org/kexi/6a37ed92fb4d97daf4188c5bedd624cf726501ae