Improve WHERE conditions handling in query and report designers

FIXED-IN:3.0.2
BUG:377579